--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import {Editor} from "../components/Editor";
+import {Test} from "../components/Test";
 import "../styles/global.css";
 ---
 
@@ -13,7 +15,8 @@ import "../styles/global.css";
 	<body class="h-screen bg-purple text-white grid grid-cols-12 grid-rows-12">
 
 		<div class="row-start-2 -row-end-2 col-start-2 -col-end-2 rounded-xl shadow-window p-4 bg-white text-zinc-950 text-sm font-mono">
-			code editor
+			<Editor />
+			 <Test />
 		</div>
 
 	</body>
