--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
-import {Editor} from "../components/Editor";
-import {Editor2} from "../components/Editor2";
+import { Editor } from "../components/Editor";
 import "../styles/global.css";
 ---
 
@@ -15,8 +14,7 @@ import "../styles/global.css";
 	<body class="h-screen bg-purple text-white grid grid-cols-12 grid-rows-12">
 
 		<div class="row-start-2 -row-end-2 col-start-2 -col-end-2 rounded-xl shadow-window p-4 bg-white text-zinc-950 text-sm font-mono">
-			<!-- <Editor /> -->
-			 <Editor2 client:only />
+			 <Editor client:only />
 		</div>
 
 	</body>
