editor color scheme

--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -13,7 +13,7 @@ import "../styles/global.css";
 	</head>
 	<body class="h-screen bg-purple text-white grid grid-cols-12 grid-rows-12">
 
-		<Editor client:only className="row-start-2 -row-end-2 col-start-2 -col-end-2 rounded-xl shadow-window p-4 bg-white text-zinc-950 text-sm font-mono" />
+		<Editor client:only className="row-start-2 -row-end-2 col-start-2 -col-end-2 rounded-xl shadow-window p-4 bg-editor-light dark:bg-editor-dark text-zinc-950 text-sm font-mono" />
 
 	</body>
 </html>
