--- a/apps/homepage/src/styles/global.css
+++ b/apps/homepage/src/styles/global.css
@@ -2,6 +2,8 @@
 
 @theme {
   --color-purple: #7964c9;
+  --color-editor-dark: #24292e;
+  --color-editor-light: #ffffff;
 
   --shadow-window: 0px 8px 40px rgba(0, 0, 0, 0.25), 0px 0px 3px rgba(0, 0, 0, 0.55),
     inset 0px 0px 3px rgba(255, 255, 255, 0.1);
