--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import { Editor } from "../components/Editor";
+import junoLogo from '../assets/juno.svg';
 import "../styles/global.css";
 ---
 
@@ -11,9 +12,8 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>juno</title>
 	</head>
-	<body class="h-screen bg-purple text-white grid grid-cols-12 grid-rows-12">
-
-		<Editor client:only className="row-start-2 -row-end-2 col-start-2 -col-end-2 rounded-xl shadow-window p-4 bg-editor-light dark:bg-editor-dark text-zinc-950 text-sm font-mono" />
-
+	<body class="h-screen bg-purple text-white grid grid-cols-[120px_380px_1fr_120px] grid-rows-[100px_1fr_100px]">
+		<img src={junoLogo.src} width="124" height="82" alt="Juno Logo" class="row-start-2 row-end-3 col-start-2" />
+		<Editor client:only className="row-start-2 row-end-3 col-start-3 col-end-4 w-full h-full rounded-xl shadow-window p-4 bg-editor-light dark:bg-editor-dark text-zinc-950 text-sm font-mono" />
 	</body>
 </html>
