--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -13,8 +13,9 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>juno</title>
 	</head>
-	<body class="h-screen bg-purple text-white grid grid-cols-[120px_380px_1fr_120px] grid-rows-[100px_1fr_100px] bg-(image:--background)" style={{"--background": `url(${bgImage.src})`}}>
+	<body class="h-screen bg-purple text-white grid grid-cols-[120px_130px_250px_1fr_120px] grid-rows-[100px_82px_75px_44px_1fr_100px] bg-(image:--background)" style={{"--background": `url(${bgImage.src})`}}>
 		<img src={junoLogo.src} width="124" height="82" alt="Juno Logo" class="row-start-2 row-end-3 col-start-2" />
-		<Editor client:only className="row-start-2 row-end-3 col-start-3 col-end-4 size-full overflow-hidden rounded-xl shadow-window p-4 bg-editor-light dark:bg-editor-dark" />
+		<button class="row-start-4 row-end-5 col-start-2 grid place-content-center bg-neutral-100 rounded-sm text-neutral-700 font-semibold cursor-pointer">Get Started</button>
+		<Editor client:only className="row-start-2 -row-end-2 -col-start-3 -col-end-2 size-full overflow-hidden rounded-xl shadow-window p-4 bg-editor-light dark:bg-editor-dark" />
 	</body>
 </html>
