--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -23,7 +23,7 @@ import "../styles/global.css";
 				<a href="#" class="text-sm text-neutral-700 hover:underline">Link 3</a>
 			</nav>
 			<section class="p-5 py-7 bg-editor-light dark:bg-editor-dark">
-				<Editor client:only className="size-full overflow-hidden" />
+				<Editor client:only="juno" className="size-full overflow-hidden" />
 			</section>
 		</div>
 	</body>
