--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Editor } from "../components/Editor";
+import { Test } from "../components/Test";
 import junoLogo from '../assets/juno.svg';
 import bgImage from '../assets/background.svg';
 import "../styles/global.css";
@@ -23,7 +23,7 @@ import "../styles/global.css";
 				<a href="#" class="text-sm text-neutral-700 hover:underline">Link 3</a>
 			</nav>
 			<section class="p-5 py-7 bg-editor-light dark:bg-editor-dark">
-				<Editor client:only className="size-full overflow-hidden" />
+				<Test />
 			</section>
 		</div>
 	</body>
