--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Test } from "../components/Test";
+import { Demo } from "../components/Demo";
 import junoLogo from '../assets/juno.svg';
 import bgImage from '../assets/background.svg';
 import "../styles/global.css";
@@ -16,15 +16,6 @@ import "../styles/global.css";
 	<body class="h-screen bg-purple text-white grid grid-cols-[4%_130px_8%_1fr_4%] grid-rows-[100px_28px_62px_64px_42px_1fr_100px] bg-(image:--background)" style={{"--background": `url(${bgImage.src})`}}>
 		<img src={junoLogo.src} width="124" height="62" alt="Juno Logo" class="row-start-3 row-end-4 col-start-2" />
 		<button class="row-start-5 row-end-6 col-start-2 grid place-content-center transition-all duration-100 bg-neutral-100 rounded-sm text-neutral-700 font-semibold cursor-pointer hover:bg-white hover:text-neutral-900 hover:shadow-sm">Get Started</button>
-		<div class="row-start-2 -row-end-2 -col-start-3 -col-end-2 rounded-xl shadow-window grid grid-rows-1 grid-cols-[minmax(200px,14%)_1fr] overflow-hidden">
-			<nav class="p-5 py-7 flex flex-col gap-2 bg-neutral-200/80 border-r-1 border-r-neutral-950/10 ">
-				<a href="#" class="text-sm text-neutral-700 hover:underline">Link 1</a>
-				<a href="#" class="text-sm text-neutral-700 hover:underline">Link 2</a>
-				<a href="#" class="text-sm text-neutral-700 hover:underline">Link 3</a>
-			</nav>
-			<section class="p-5 py-7 bg-editor-light dark:bg-editor-dark">
-				<Test />
-			</section>
-		</div>
+		<Demo />
 	</body>
 </html>
