--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -16,6 +16,6 @@ import "../styles/global.css";
 	<body class="h-screen bg-purple text-white grid grid-cols-[4%_130px_8%_1fr_4%] grid-rows-[100px_28px_62px_64px_42px_1fr_100px] bg-(image:--background)" style={{"--background": `url(${bgImage.src})`}}>
 		<img src={junoLogo.src} width="124" height="62" alt="Juno Logo" class="row-start-3 row-end-4 col-start-2" />
 		<button class="row-start-5 row-end-6 col-start-2 grid place-content-center transition-all duration-100 bg-neutral-100 rounded-sm text-neutral-700 font-semibold cursor-pointer hover:bg-white hover:text-neutral-900 hover:shadow-sm">Get Started</button>
-		<Demo />
+		<Demo client:load />
 	</body>
 </html>
