--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -13,9 +13,9 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>juno</title>
 	</head>
-	<body class="h-screen bg-purple text-white grid grid-cols-[4%_130px_8%_1fr_130px_4%] grid-rows-[100px_28px_62px_64px_42px_1fr_100px] bg-(image:--background)" style={{"--background": `url(${bgImage.src})`}}>
-		<img src={junoLogo.src} width="124" height="62" alt="Juno Logo" class="row-start-3 row-end-4 col-start-2" />
-		<button class="row-start-3 row-end-4 md:row-start-5 md:row-end-6 col-start-5 md:col-start-2 grid place-content-center transition-all duration-150 bg-neutral-100 rounded-sm text-neutral-700 font-semibold cursor-pointer hover:bg-white hover:text-violet-950 hover:shadow-sm">Get Started</button>
+	<body class="h-screen bg-purple text-white grid grid-rows-[28px_62px_64px_42px_1fr_100px] md:grid-rows-[100px_28px_62px_64px_42px_1fr_100px] grid-cols-[4%_130px_8%_1fr_130px_4%] bg-(image:--background)" style={{"--background": `url(${bgImage.src})`}}>
+		<img src={junoLogo.src} width="124" height="62" alt="Juno Logo" class="row-start-2 row-end-3 md:row-start-3 md:row-end-4  col-start-2" />
+		<button class="row-start-2 row-end-3 md:row-start-5 md:row-end-6 col-start-5 md:col-start-2 grid place-content-center transition-all duration-150 bg-neutral-100 rounded-sm text-neutral-700 font-semibold cursor-pointer hover:bg-white hover:text-violet-950 hover:shadow-sm">Get Started</button>
 		<Playground client:load />
 	</body>
 </html>
