--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -12,7 +12,7 @@ import '../styles/global.css'
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body class="p-40 grid gap-10">
+	<body class="p-40 grid gap-10 dark:bg-zinc-950 dark:text-neutral-100">
 		<header>
 			<h1>Lukas Bombach</h1>
 			<p>I'm a web developer from Berlin, Germany</p>
@@ -21,15 +21,15 @@ import '../styles/global.css'
 
 		<main>
 			<ul>
-				<li>
-					<time datetime="2025-12" class="font-bold uppercase text-sm">2025 Dec</time>
-					<a href="/syntax-highlighting-with-just-two-html-elements">
+				<li class="grid content-center grid-flow-col-dense justify-start gap-2 leading-7">
+					<time datetime="2025-12" class="uppercase text-xs font-medium">2025 Dec</time>
+					<a class="dark:text-emerald-700" href="/syntax-highlighting-with-just-two-html-elements">
 						Syntax highlighting with just two html elements
 					</a>
 				</li>
-				<li>
-					<time datetime="2019-05" class="font-bold uppercase text-sm">2019 May</time>
-					<a href="https://medium.com/@luke_schmuke/how-we-achieved-the-best-web-performance-with-partial-hydration-20fab9c808d5" rel="nofollow">
+				<li class="grid content-center grid-flow-col-dense justify-start gap-2 leading-7">
+					<time datetime="2019-05" class="uppercase text-xs font-medium">2019 May</time>
+					<a class="dark:text-emerald-700" href="https://medium.com/@luke_schmuke/how-we-achieved-the-best-web-performance-with-partial-hydration-20fab9c808d5" rel="nofollow">
 						The case of partial hydration (on Medium)
 					</a>
 				</li>
